--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1 id="appName">Microsoft Friend</h1>
-    <img src="logo.png" alt="App Logo" width="150">
+    <img src="Logo.png" alt="App Logo" width="150">
     <p id="languageLabel">Select your language:</p>
     <select id="languageSelect">
       <option value="en">English</option>
