--- a/index.html
+++ b/index.html
@@ -117,3 +117,4 @@
 </html>
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
+<img src="images/logo.png" alt="App Logo">
