--- a/index.html
+++ b/index.html
@@ -117,4 +117,4 @@
 </html>
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
-<img src="images/logo.jpg" alt="App Logo">
+<img src="images/Logo.jpg" alt="App Logo">
