--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
     <section id="walkthroughs">
       <h2 id="walkthroughsTitle">Visual Walkthroughs</h2>
    <section id="walkthroughs">
+<select id="languageSelect">
+  <option value="en">English</option>
+  <option value="fi">Suomi</option>
+  <option value="pl">Polski</option>
+  <option value="ar">العربية</option>
+</select>
+
+<!-- Add buttons for scrolling -->
+<button onclick="scrollToSection('english')">Scroll to English</button>
+<button onclick="scrollToSection('suomi')">Scroll to Suomi</button>
+<button onclick="scrollToSection('polski')">Scroll to Polski</button>
+<button onclick="scrollToSection('العربية')">Scroll to العربية</button>
 
 <div id="tutorialContainer">
     <div id="wordTutorials">
