--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <button onclick="scrollToSection('العربية')">Scroll to العربية</button>
 
 <div id="tutorialContainer">
+  <div id="englishTutorials">
     <div id="wordTutorials">
       <p> English
       </p>
@@ -70,6 +71,7 @@
       <ol id="teamsTasks"></ol>
     </div>
   <div id="tutorialContainer">
+    <div id="suomiTutorials">
     <div id="wordTutorials">
       <div id="wordTutorials">
   <p>Suomi</p>
@@ -88,6 +90,9 @@
       <h3>Microsoft Teams Tehtävät</h3>
       <ol id="teamsTehtävät"></ol>
     </div>
+      <div id="tutorialContainer">
+  <div id="polskiTutorials">
+    <div id="wordTutorials">
       <p>Polski</p>
 <h3>Microsoft Word Zadania</h3>
 <ol id="wordZadania"></ol>
@@ -104,6 +109,9 @@
   <h3>Microsoft Teams Zadania</h3>
   <ol id="teamsZadania"></ol>
 </div>
+   <div id="tutorialContainer">
+  <div id="العربيةTutorials">
+    <div id="wordTutorials"> 
 <p>العربية</p>
 <h3>مهام Microsoft Word</h3>
 <ol id="wordMawahid"></ol>
