--- a/index.html
+++ b/index.html
@@ -44,86 +44,85 @@
   <option value="ar">العربية</option>
 </select>
 
-<button onclick="scrollToSection('english')">Scroll to English</button>
-<button onclick="scrollToSection('suomi')">Scroll to Suomi</button>
-<button onclick="scrollToSection('polski')">Scroll to Polski</button>
-<button onclick="scrollToSection('العربية')">Scroll to العربية</button>
+<button onclick="scrollToSection('englishTutorials')">Scroll to English</button>
+<button onclick="scrollToSection('suomiTutorials')">Scroll to Suomi</button>
+<button onclick="scrollToSection('polskiTutorials')">Scroll to Polski</button>
+<button onclick="scrollToSection('العربيةTutorials')">Scroll to العربية</button>
 
 <div id="tutorialContainer">
-  <div id="englishTutorials">
-    <div id="wordTutorials">
+  <div id="englishWordTutorials">
+    <div id="englishTutorials">
       <p> English
       </p>
       <h3>Microsoft Word Tasks</h3>
       <ol id="wordTasks"></ol>
     </div>
-    <div id="excelTutorials">
+    <div id="englishExcelTutorials">
       <h3>Microsoft Excel Tasks</h3>
       <ol id="excelTasks"></ol>
     </div>
-    <div id="powerpointTutorials">
+    <div id="englishPowerpointTutorials">
       <h3>Microsoft PowerPoint Tasks</h3>
       <ol id="powerpointTasks"></ol>
     </div>
-    <div id="teamsTutorials">
+    <div id="englishTeamsTutorials">
       <h3>Microsoft Teams Tasks</h3>
       <ol id="teamsTasks"></ol>
     </div>
   <div id="tutorialContainer">
+    <div id="suomiWordTutorials">
     <div id="suomiTutorials">
-    <div id="wordTutorials">
-      <div id="wordTutorials">
   <p>Suomi</p>
   <h3>Microsoft Word Tehtävät</h3>
   <ol id="wordTehtävät"></ol>
 </div>
-<div id="excelTutorials">
+<div id="suomiExcelTutorials">
   <h3>Microsoft Excel Tehtävät</h3>
   <ol id="excelTehtävät"></ol>
 </div>
-<div id="powerpointTutorials">
+<div id="SuomiPowerpointTutorials">
   <h3>Microsoft PowerPoint Tehtävät</h3>
   <ol id="powerpointTehtävät"></ol>
 </div>
-    <div id="teamsTutorials">
+    <div id="suomiTeamsTutorials">
       <h3>Microsoft Teams Tehtävät</h3>
       <ol id="teamsTehtävät"></ol>
     </div>
       <div id="tutorialContainer">
-  <div id="polskiTutorials">
-    <div id="wordTutorials">
+  <div id="polskiWordTutorials">
+    <div id="polskiTutorials">
       <p>Polski</p>
 <h3>Microsoft Word Zadania</h3>
 <ol id="wordZadania"></ol>
 </div>
-<div id="excelTutorials">
+<div id="polskiExcelTutorials">
   <h3>Microsoft Excel Zadania</h3>
   <ol id="excelZadania"></ol>
 </div>
-<div id="powerpointTutorials">
+<div id="polskiPowerpointTutorials">
   <h3>Microsoft PowerPoint Zadania</h3>
   <ol id="powerpointZadania"></ol>
 </div>
-<div id="teamsTutorials">
+<div id="polskiTeamsTutorials">
   <h3>Microsoft Teams Zadania</h3>
   <ol id="teamsZadania"></ol>
 </div>
    <div id="tutorialContainer">
-  <div id="العربيةTutorials">
-    <div id="wordTutorials"> 
+  <div id="العربيةWordTutorials">
+    <div id=""العربيةTutorials"> 
 <p>العربية</p>
 <h3>مهام Microsoft Word</h3>
 <ol id="wordMawahid"></ol>
 </div>
-<div id="excelTutorials">
+<div id=""العربيةExcelTutorials">
   <h3>مهام Microsoft Excel</h3>
   <ol id="excelMawahid"></ol>
 </div>
-<div id="powerpointTutorials">
+<div id=""العربيةPowerpointTutorials">
   <h3>مهام Microsoft PowerPoint</h3>
   <ol id="powerpointMawahid"></ol>
 </div>
-<div id="teamsTutorials">
+<div id=""العربيةTeamsTutorials">
   <h3>مهام Microsoft Teams</h3>
   <ol id="teamsMawahid"></ol>
 </div>    
