--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <button onclick="scrollToSection('englishTutorials')">Scroll to English</button>
 <button onclick="scrollToSection('suomiTutorials')">Scroll to Suomi</button>
 <button onclick="scrollToSection('polskiTutorials')">Scroll to Polski</button>
-<button onclick="scrollToSection('العربيةTutorials')">Scroll to العربية</button>
+<button onclick="scrollToSection('العربيةTutorials')">Scroll to >العربية</button>
 
 <div id="tutorialContainer">
   <div id="englishWordTutorials">
@@ -109,20 +109,20 @@
 </div>
    <div id="tutorialContainer">
   <div id="العربيةWordTutorials">
-    <div id=""العربيةTutorials"> 
+    <div id="العربيةTutorials"> 
 <p>العربية</p>
 <h3>مهام Microsoft Word</h3>
 <ol id="wordMawahid"></ol>
 </div>
-<div id=""العربيةExcelTutorials">
+<div id="العربيةExcelTutorials">
   <h3>مهام Microsoft Excel</h3>
   <ol id="excelMawahid"></ol>
 </div>
-<div id=""العربيةPowerpointTutorials">
+<div id="العربيةPowerpointTutorials">
   <h3>مهام Microsoft PowerPoint</h3>
   <ol id="powerpointMawahid"></ol>
 </div>
-<div id=""العربيةTeamsTutorials">
+<div id="العربيةTeamsTutorials">
   <h3>مهام Microsoft Teams</h3>
   <ol id="teamsMawahid"></ol>
 </div>    
